Fixed process widget alignment and greater than icons on mobility resolutions

--- a/css/personalizedContent/widgets.less
+++ b/css/personalizedContent/widgets.less
@@ -95,6 +95,9 @@
 	li#processOfMe{
 		div.widget-item{
 			border-left : 3px solid @pc-blue-light;
+				div.progress-item{
+					padding: 0 10px;
+				}
 				div.duedate{
 					font-size : 10px;
 					color     : @pc-red;
